@@ -38,6 +38,7 @@
 * Remove AN and KV country codes as they're not recognized by ISO-3166-1 [apdunston]
 * Worldpay: Pass unchanged amount with correct currency exponent [curiousepic]
 * Improve our handling of currencies sans fractions [duff]
+* Stripe: Added support for the contactless magstripe entry mode option [rbalsdon]
 
 
 == Version 1.58.0 (March 1, 2016)
